Editing projects description, verified all links are working

--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -9,7 +9,7 @@
         
         <div class="project-card">
             <h2>This Website</h2>
-            <p>The portfolio website you are currently viewing, built with Python (Flask), HTML, CSS, and JavaScript to showcase my work and skills.</p>
+            <p>The portfolio website you are currently viewing, built with Python (Flask), HTML, CSS, and JavaScript, based on Terraform Iac, AWS, K8S and ArgoCD, to showcase my work and skills.</p>
             <div class="project-links">
                 <a href="https://github.com/liormilliger/mywebsite-app.git" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i> View on GitHub
@@ -19,7 +19,7 @@
 
         <div class="project-card">
             <h2>Portfolio Blog</h2>
-            <p>A full-stack blog application designed to host articles, tutorials, and project deep-dives, demonstrating content management and web development skills.</p>
+            <p>A full-stack microservices blog application designed to host articles, tutorials, and project deep-dives, demonstrating content management and web development skills, and Monolith to Microservices migration</p>
             <div class="project-links">
                 <a href="https://github.com/liormilliger/Portfolio-app.git" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i> View on GitHub
@@ -29,7 +29,7 @@
 
         <div class="project-card">
             <h2>Chatapp</h2>
-            <p>A real-time chat application built to explore and implement WebSocket technology for instant two-way communication.</p>
+            <p>A real-time chat application built to explore and implement WebSocket technology for instant two-way communication. Based on a simple microservices architecture including MySQL DB and Nginx reverse-proxy</p>
             <div class="project-links">
                 <a href="https://github.com/liormilliger/Chatapp.git" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i> View on GitHub
@@ -38,8 +38,8 @@
         </div>
 
         <div class="project-card">
-            <h2>GateUP</h2>
-            <p>A utility tool designed to manage and automate gate operations, focusing on system integration and remote control.</p>
+            <h2>GateUP (Serverless)</h2>
+            <p>A utility tool designed to manage and automate gate operations, focusing on system integration and remote control. Based on Serverless event-based operations</p>
             <div class="project-links">
                 <a href="https://github.com/liormilliger/GateUP.git" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i> View on GitHub
@@ -59,7 +59,7 @@
 
         <div class="project-card">
             <h2>Linux Server Data Collection</h2>
-            <p>A collection of scripts and tools for gathering, processing, and analyzing performance and system data from Linux servers.</p>
+            <p>A collection of Bash scripts and tools for gathering, processing, and analyzing performance and system data from Linux servers.</p>
             <div class="project-links">
                 <a href="https://github.com/liormilliger/linux-srv-data-collection.git" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i> View on GitHub
