Designed logos added

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,6 +6,15 @@
 <div class="page-content">
     <h1>About Me</h1>
 
+    <p><em>
+        A DevOps engineer specializing in accelerating software delivery through robust and secure CI/CD pipelines.<br>
+        My core expertise lies in architecting and managing scalable, secure, and cost-optimized infrastructure on AWS and with Kubernetes managed with Terraform.
+        <br><br>
+        I bring extensive hands-on experience with a wide range of tools (For a full presentation of my tech stack click <a href="{{ url_for('tech') }}">HERE</a>).<br>
+        My proficiency extends to troubleshooting performance and networking issues, as well as managing and securing artifacts with Artifactory and Xray.<br>
+        Linux system administration is one of my favorites, and I have a decent hands on experience with Proxies and Databases.
+    </em></p>
+
     <div class="about-me-container">
         <aside class="about-me-menu">
             <ul>
