About page design adapted

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,17 +6,19 @@
 <div class="page-content">
     <h1>About Me</h1>
 
-    <p><em>
-        A DevOps engineer specializing in accelerating software delivery through robust and secure CI/CD pipelines.<br>
-        My core expertise lies in architecting and managing scalable, secure, and cost-optimized infrastructure on AWS and with Kubernetes managed with Terraform.
-        <br><br>
-        I bring extensive hands-on experience with a wide range of tools (For a full presentation of my tech stack click <a href="{{ url_for('tech') }}">HERE</a>).<br>
-        My proficiency extends to troubleshooting performance and networking issues, as well as managing and securing artifacts with Artifactory and Xray.<br>
-        Linux system administration is one of my favorites, and I have a decent hands on experience with Proxies and Databases.
-    </em></p>
-
+    <div style="border: 1px solid #ddd; padding: 20px; border-radius: 8px; margin-bottom: 2em;">
+        <p><em>
+            A DevOps engineer specializing in accelerating software delivery through robust and secure CI/CD pipelines.<br>
+            My core expertise lies in architecting and managing scalable, secure, and cost-optimized infrastructure on AWS and with Kubernetes managed with Terraform.
+            <br><br>
+            I bring extensive hands-on experience with a wide range of tools (For a full presentation of my tech stack click <a href="{{ url_for('tech') }}" style="color: lightblue; text-decoration: none;">HERE</a>).<br>
+            My proficiency extends to troubleshooting performance and networking issues, as well as managing and securing artifacts with Artifactory and Xray.<br>
+            Linux system administration is one of my favorites, and I have a decent hands on experience with Proxies and Databases.
+        </em></p>
+    </div>
+    
     <div class="about-me-container">
-        <aside class="about-me-menu">
+        <aside class="about-me-menu" style="margin-top: 80px;">
             <ul>
                 <li><a href="#overture">The Overture</a></li>
                 <li><a href="#transition">The Transition</a></li>
@@ -50,7 +52,7 @@
 
             <section id="second-movement">
                 <h2>Second Movement: Unknown</h2>
-                <p>I am now actively seeking my next challenge—a role where I can apply my comprehensive skills in cloud infrastructure and automation to a collaborative and forward-thinking team. I am eager to contribute to building, scaling, and optimizing robust systems and to continue learning and growing in the dynamic field of DevOps.</p>
+                <p>I am now actively seeking my next challenge—a role where I can apply my comprehensive skills in cloud infrastructure and automation to a a collaborative and forward-thinking team. I am eager to contribute to building, scaling, and optimizing robust systems and to continue learning and growing in the dynamic field of DevOps.</p>
             </section>
         </main>
     </div>
