init.sql for db

--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -183,8 +183,8 @@
             {# <div id="fluentbit" class="tech-content-panel" style="display: none;">{% include 'snippets/FluentBit.html' %}</div>
             <div id="elasticsearch" class="tech-content-panel" style="display: none;">{% include 'snippets/ElasticSearch.html' %}</div>
             <div id="kibana" class="tech-content-panel" style="display: none;">{% include 'snippets/Kibana.html' %}</div> #}
-            <div id="python" class="tech-content-panel" style="display: none;">{% include 'snippets/Python.html' %}</div>
-            <div id="bash" class="tech-content-panel" style="display: none;">{% include 'snippets/Bash.html' %}</div>
+            <div id="python" class="tech-content-panel" style="display: none;">{% include 'snippets/python.html' %}</div>
+            <div id="bash" class="tech-content-panel" style="display: none;">{% include 'snippets/bash.html' %}</div>
             <div id="postgresql" class="tech-content-panel" style="display: none;">{% include 'snippets/PostgreSQL.html' %}</div>
             <div id="mysql" class="tech-content-panel" style="display: none;">{% include 'snippets/MySQL.html' %}</div>
             <div id="nginx" class="tech-content-panel" style="display: none;">{% include 'snippets/Nginx.html' %}</div>
